# siranga

./: Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: publish-to-pypi.yml
siranga/: __init__.py  __main__.py  config.py  helpers.py  nested.py  prompt.py  siranga.py
ssh/: config
